[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/MobSpawn/MobSpawn.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 462.825, 0, 0, 0, 0, 0, 0 )
}

[node name="MobSpawn" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftPath" type="Path2D" parent="."]
scale = Vector2( 1.01376, 0.967969 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="LeftPath"]
position = Vector2( 0, 462.825 )
rotation = -1.5708

[node name="RightPath" type="Path2D" parent="."]
position = Vector2( 1024, 0 )
scale = Vector2( 1.01376, 0.967969 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="RightPath"]
position = Vector2( 0, 462.825 )
rotation = -1.5708

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
